--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-	margin:0;padding:0;
+    padding:0;
 	box-sizing: border-box;
 }
 
@@ -8,32 +8,33 @@ a, a:link, a:active, a:visited {
 	color:white;
 }
 
-#roundcorner {
-    border-radius: 35px;
-    background: #2183ed;
-    width: 70px;
-    height: 70px;
-    font-size: 40pt;
+.letter-block {
+    vertical-align: middle;
     text-align: center;
-    line-height: 50px;
+    border-radius: 35px;
+    background: #cecda3;
+    width: 50px;
+    height: 50px;
     display: inline-block;
 }
-#roundcorner:hover {
-    background: #599fea;
+.letter-block:hover {
+    background: #a3aecc;
 }
-#roundcorner:active {
+.letter-block:active {
 }
-#roundcorner:focus {
-    background: #0469ce;
+.letter-block:focus {
+    background: #7a7ac9;
 }
 
+
 .game-table{
-  width:434px;
+  width:500px;
+  height: 400px;
   margin:auto;
   background: #f2f0cb;
   position:relative;
   display: block;
-  margin-top 20px;
+  padding-top 100px;
 }
 
 .play-btn {
@@ -72,13 +73,26 @@ a, a:link, a:active, a:visited {
     vertical-align: middle;
 }
 
+#submit-box {
+    background-color; #686dc9;
+    margin: 10px;
+}
+
+#word-box {
+    margin-bottom: 10px;
+}
+
 .board td a {
     color: black;
 }
 
 
 #submit {
-    background: red;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 10px;
+    background: #c94c4c;
 }
 
 body {
